멀티캠퍼스 주소 수정

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                                 <img src="images/multicampus.jpg" alt="bns sandbox">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://sandbox.plaync.com/lyn/my/timeline/wall" class="btn">SDS Multicampus Full View</a>
+                                        <a href="http://www.multicampus.co.kr" class="btn">SDS Multicampus Full View</a>
                                     </div>
                                 </div>
                             </div>
