포트폴리오 추가 및 오타 수정

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                         NCSOFT (Game)
                                     </h5><span class="label label-danger">2011.05 - Till Death</span>
                                     <p>
-                                        - Blase&Soul Gamer SNS Sandbox
+                                        - Blade&Soul Gamer SNS Sandbox
                                     </p>
 									<p>
                                         - Plaync Notification
@@ -291,10 +291,10 @@
                                     <span style="width: 90%"><span>Tiles/Thymleaf</span></span>
                                 </div>
                                 <div class="meter sunflower">
-                                    <span style="width: 80%"><span>Commons/Guava/Lombok</span></span>
+                                    <span style="width: 80%"><span>QueryDSL</span></span>
                                 </div>
                                 <div class="meter midnight">
-                                    <span style="width: 90%"><span>QueryDSL</span></span>
+                                    <span style="width: 90%"><span>Commons/Guava/Lombok</span></span>
                                 </div>
                                 <div class="meter pomengrate">
                                     <span style="width: 60%"><span>Hateoas</span></span>
@@ -303,7 +303,7 @@
                                     <span style="width: 70%"><span>HibernateValidation</span></span>
                                 </div>
 								<div class="meter carrot">
-                                    <span style="width: 90%"><span>Logback</span></span>
+                                    <span style="width: 90%"><span>Jasypt/Logback/Jodatime</span></span>
                                 </div>
 								<div class="break"></div>
 								<h5>
@@ -340,6 +340,9 @@
                                 <div class="meter carrot">
                                     <span style="width: 85%"><span>Maven</span></span>
                                 </div>
+                                <div class="meter wisteria">
+                                    <span style="width: 100%"><span>Ant</span></span>
+                                </div>
                                 <div class="break"></div>
 								<h5>
                                     Supporting Server
@@ -363,7 +366,7 @@
                                     <span style="width: 100%"><span>Gitlab/Stash</span></span>
                                 </div>
 								<div class="meter asbestos">
-                                    <span style="width: 100%"><span>Jira/Redmine/confluence</span></span>
+                                    <span style="width: 100%"><span>Jira/Confluence/Redmine</span></span>
                                 </div>
 								<div class="break"></div>
                             </div>
@@ -376,7 +379,7 @@
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <img src="images/sandbox.jpg" alt="NCSOFT Sandbox">
+                                <img src="images/sandbox.jpg" alt="NCSOFT BNS Sandbox">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="http://sandbox.plaync.com/lyn/my/timeline/wall" class="btn">NCSOFT SNS Full View</a>
@@ -389,14 +392,25 @@
                                 <img src="images/1sttest.jpg" alt="Freechal 1sttest">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="#" class="btn">Freechal Site Closed View</a>
+                                        <a href="#" class="btn">Freechal Admissions Portal Closed View</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="images/multicampus.jpg" alt="bns sandbox">
+                                <img src="images/iam.jpg" alt="Freechal 1sttest">
+                                <div class="image-overlay">
+                                    <div class="image-link">
+                                        <a href="#" class="btn">Freechal IAM SNS Closed View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="break"></div>
+                        <div class="g1">
+                            <div class="image">
+                                <img src="images/multicampus.jpg" alt="SDS Multicampus">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="http://www.multicampus.co.kr" class="btn">SDS Multicampus Full View</a>
@@ -404,7 +418,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="break"></div>
 						<div class="g1">
                             <div class="image">
                                 <img src="images/hunel.jpg" alt="HCG Hunel">
@@ -417,20 +430,10 @@
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="images/sandbox.jpg" alt="bns sandbox">
+                                <img src="images/seminar.jpg" alt="bns sandbox">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://sandbox.plaync.com/lyn/my/timeline/wall" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="images/sandbox.jpg" alt="bns sandbox">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a>
+                                        <a href="http://www.slideshare.net/gmind7/2014-28770610?from_search=1" class="btn">Seminar Full View</a>
                                     </div>
                                 </div>
                             </div>
