--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="images/iam.jpg" alt="Freechal 1sttest">
+                                <img src="images/iam.jpg" alt="Freechal iam">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="#" class="btn">Freechal IAM SNS Closed View</a>
