--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                                 <img src="images/1sttest.jpg" alt="Freechal 1sttest">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="#" class="btn">Freechal Admissions Portal Closed View</a>
+                                        <a href="#" class="btn">Freechal Admissions Portal Site Closed</a>
                                     </div>
                                 </div>
                             </div>
@@ -402,7 +402,7 @@
                                 <img src="images/iam.jpg" alt="Freechal iam">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="#" class="btn">Freechal IAM SNS Closed View</a>
+                                        <a href="#" class="btn">Freechal IAM Blog Site Closed</a>
                                     </div>
                                 </div>
                             </div>
