사진해상도조정

--- a/index.html
+++ b/index.html
@@ -430,10 +430,10 @@
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="images/seminar.jpg" alt="bns sandbox">
+                                <img src="images/seminar.jpg" alt="slideshare">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://www.slideshare.net/gmind7/2014-28770610?from_search=1" class="btn">Seminar Full View</a>
+                                        <a href="http://www.slideshare.net/gmind7/2014-28770610?from_search=1" class="btn">slideshare Full View</a>
                                     </div>
                                 </div>
                             </div>
@@ -493,8 +493,5 @@
         </footer>
     </div><!-- #main -->
 </div><!-- #main-container -->
-
-
-
 </body>
 </html>
