--- a/index.html
+++ b/index.html
@@ -203,19 +203,6 @@
                                     </p>
                                 </li>
                             </ul>
-                            <h3>
-                                Education
-                            </h3>
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        동양미래대학교(소프트웨어정보과)
-                                    </h5><span class="label label-success">2003.03 - 2006.02</span>
-                                    <p>
-                                        시스템프로그래밍, 데이터베이스 및 네트워크 프로그래밍을 중심의 학부 과정 졸업 
-                                    </p>
-                                </li>
-                            </ul>
 							<h3>
                                 Military Service
                             </h3>
@@ -293,19 +280,6 @@
                                 <div class="meter sunflower">
                                     <span style="width: 80%"><span>QueryDSL</span></span>
                                 </div>
-                                <div class="meter midnight">
-                                    <span style="width: 90%"><span>Commons/Guava/Lombok</span></span>
-                                </div>
-                                <div class="meter pomengrate">
-                                    <span style="width: 60%"><span>Hateoas</span></span>
-                                </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 70%"><span>HibernateValidation</span></span>
-                                </div>
-								<div class="meter carrot">
-                                    <span style="width: 90%"><span>Jasypt/Logback/Jodatime</span></span>
-                                </div>
-								<div class="break"></div>
 								<h5>
                                     Develop Server
                                 </h5>
@@ -364,9 +338,6 @@
                                 </div>
 								<div class="meter pomengrate">
                                     <span style="width: 100%"><span>Gitlab/Stash</span></span>
-                                </div>
-								<div class="meter asbestos">
-                                    <span style="width: 100%"><span>Jira/Confluence/Redmine</span></span>
                                 </div>
 								<div class="break"></div>
                             </div>
@@ -474,7 +445,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>About Me</h4>
-                              <p>사람이 이해 할 수 없는 코드, 읽기 싫은 코드가 똥 싼 코드라는 것을 아는 개발자 입니다.</p>
+                              <p>컴퓨터가 이해할 수 있는 코드는 어느 바보나 다 짤 수 있다. 좋은 프로그래머는 사람이 이해할 수 있는 코드를 짠다. -마틴 파울러</p>
                             </div>
                          </div>
                        </div>
