--- a/index.html
+++ b/index.html
@@ -227,14 +227,17 @@
                                 <div class="meter wisteria">
                                     <span style="width: 100%"><span>Java</span></span>
                                 </div>
-								<div class="meter sunflower">
+				<div class="meter sunflower">
                                     <span style="width: 40%"><span>Groovy</span></span>
                                 </div>
                                 <div class="meter midnight">
                                     <span style="width: 30%"><span>Python</span></span>
                                 </div>
-								<div class="break"></div>
-								<h5>
+                                <div class="meter midnight">
+                                    <span style="width: 30%"><span>AngularJS</span></span>
+                                </div>
+				<div class="break"></div>
+				<h5>
                                     Spring Framework
                                 </h5>
                                 <div class="meter emerald">
