--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 <div class="meter midnight">
                                     <span style="width: 30%"><span>Python</span></span>
                                 </div>
-                                <div class="meter midnight">
+                                <div class="meter pomengrate">
                                     <span style="width: 30%"><span>AngularJS</span></span>
                                 </div>
 				<div class="break"></div>
