--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 <h3>
                                     Skills
                                 </h3>
-								<h5>
+				<h5>
                                     Programming Language
                                 </h5>
                                 <div class="meter wisteria">
@@ -231,10 +231,7 @@
                                     <span style="width: 40%"><span>Groovy</span></span>
                                 </div>
                                 <div class="meter midnight">
-                                    <span style="width: 30%"><span>Python</span></span>
-                                </div>
-                                <div class="meter pomengrate">
-                                    <span style="width: 30%"><span>AngularJS</span></span>
+                                    <span style="width: 40%"><span>Python</span></span>
                                 </div>
 				<div class="break"></div>
 				<h5>
@@ -268,7 +265,7 @@
                                     <span style="width: 90%"><span>Spring-Insight</span></span>
                                 </div>
 								<div class="break"></div>
-								<h5>
+				<h5>
                                     Java Supporting
                                 </h5>
                                 <div class="meter emerald">
@@ -283,7 +280,16 @@
                                 <div class="meter sunflower">
                                     <span style="width: 80%"><span>QueryDSL</span></span>
                                 </div>
-								<h5>
+                                <h5>
+                                    Javascript Supporting
+                                </h5>
+                                <div class="meter emerald">
+                                    <span style="width: 70%"><span>JQuery</span></span>
+                                </div>
+                                <div class="meter carrot">
+                                    <span style="width: 30%"><span>AngularJS</span></span>
+                                </div>
+				<h5>
                                     Develop Server
                                 </h5>
                                 <div class="meter emerald">
@@ -292,7 +298,7 @@
                                 <div class="meter carrot">
                                     <span style="width: 92%"><span>Memcached/Ehcache</span></span>
                                 </div>
-								<div class="meter wisteria">
+				<div class="meter wisteria">
                                     <span style="width: 80%"><span>RabbitMQ/ActiveMQ</span></span>
                                 </div>
 								<div class="meter sunflower">
@@ -312,13 +318,13 @@
                                     Build Automation
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 95%"><span>Gradle</span></span>
+                                    <span style="width: 100%"><span>Gradle</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 85%"><span>Maven</span></span>
+                                    <span style="width: 90%"><span>Maven</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 100%"><span>Ant</span></span>
+                                    <span style="width: 90%"><span>Ant</span></span>
                                 </div>
                                 <div class="break"></div>
 								<h5>
@@ -334,13 +340,13 @@
                                     <span style="width: 100%"><span>Nexus</span></span>
                                 </div>
 								<div class="meter sunflower">
-                                    <span style="width: 90%"><span>Sonar</span></span>
+                                    <span style="width: 90%"><span>Sonarqube(Code Quality)</span></span>
                                 </div>
 								<div class="meter midnight">
-                                    <span style="width: 70%"><span>Box Anemometer</span></span>
+                                    <span style="width: 70%"><span>Box Anemometer(Slow Query)</span></span>
                                 </div>
 								<div class="meter pomengrate">
-                                    <span style="width: 100%"><span>Gitlab/Stash</span></span>
+                                    <span style="width: 100%"><span>Gitlab/Stash(SCM)</span></span>
                                 </div>
 								<div class="break"></div>
                             </div>
