--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@
                                 <div class="meter sunflower">
                                     <span style="width: 80%"><span>QueryDSL</span></span>
                                 </div>
+                                <div class="meter midnight">
+                                    <span style="width: 50%"><span>Logstash</span></span>
+                                </div>
                                 <h5>
                                     Javascript Supporting
                                 </h5>
@@ -311,6 +314,9 @@
                                     <span style="width: 50%"><span>Infispan</span></span>
                                 </div>
                                 <div class="meter asbestos">
+                                    <span style="width: 50%"><span>ElasticSearch/Kibana</span></span>
+                                </div>
+                                <div class="meter emerald">
                                     <span style="width: 80%"><span>MySQL/Oracle</span></span>
                                 </div>
                                 <div class="break"></div>
