--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                     <span style="width: 50%"><span>Infispan</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 50%"><span>ElasticSearch/Kibana</span></span>
+                                    <span style="width: 40%"><span>Elasticsearch</span></span>
                                 </div>
                                 <div class="meter emerald">
                                     <span style="width: 80%"><span>MySQL/Oracle</span></span>
