--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                     <span style="width: 100%"><span>Rundeck(Deploy)</span></span>
                                 </div>
 								<div class="meter wisteria">
-                                    <span style="width: 100%"><span>Nexus</span></span>
+                                    <span style="width: 100%"><span>Nexus/Artifactory</span></span>
                                 </div>
 								<div class="meter sunflower">
                                     <span style="width: 90%"><span>Sonarqube(Code Quality)</span></span>
