--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@
 								<div class="meter emerald">
                                     <span style="width: 50%"><span>Spring-Data-Rest</span></span>
                                 </div>
-								<div class="meter carrot">
+                                <div class="meter carrot">
+                                    <span style="width: 90%"><span>Spring-Social</span></span>
+                                </div>
+				<div class="meter wisteria">
                                     <span style="width: 90%"><span>Spring-Insight</span></span>
                                 </div>
 								<div class="break"></div>
@@ -351,10 +354,13 @@
 								<div class="meter midnight">
                                     <span style="width: 70%"><span>Box Anemometer(Slow Query)</span></span>
                                 </div>
-								<div class="meter pomengrate">
+				<div class="meter pomengrate">
                                     <span style="width: 100%"><span>Gitlab/Stash(SCM)</span></span>
                                 </div>
-								<div class="break"></div>
+                                <div class="meter asbestos">
+                                    <span style="width: 40%"><span>AWS</span></span>
+                                </div>
+				<div class="break"></div>
                             </div>
                         </div>
                     </section>
