--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
                                     <span style="width: 100%"><span>Sonarqube(Code Quality)</span></span>
                                 </div>
 								<div class="meter midnight">
-                                    <span style="width: 70%"><span>Box Anemometer(Slow Query)</span></span>
+                                    <span style="width: 70%"><span>Box Anemometer(S.Query)</span></span>
                                 </div>
 				<div class="meter pomengrate">
-                                    <span style="width: 80%"><span>Gitlab/Stash(SCM)</span></span>
+                                    <span style="width: 90%"><span>Gitlab/Stash(SCM)</span></span>
                                 </div>
                                 <div class="meter asbestos">
                                     <span style="width: 40%"><span>AWS</span></span>
