--- a/index.html
+++ b/index.html
@@ -241,31 +241,34 @@
                                     <span style="width: 100%"><span>Spring-MVC</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>Spring-Batch</span></span>
+                                    <span style="width: 95%"><span>Spring-Batch</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 60%"><span>Spring-Security</span></span>
+                                    <span style="width: 70%"><span>Spring-Security</span></span>
                                 </div>
                                 <div class="meter sunflower">
-                                    <span style="width: 55%"><span>Spring-Integration</span></span>
+                                    <span style="width: 80%"><span>Spring-Integration</span></span>
                                 </div>
                                 <div class="meter midnight">
-                                    <span style="width: 50%"><span>Spring-Boot</span></span>
+                                    <span style="width: 100%"><span>Spring-Boot</span></span>
                                 </div>
                                 <div class="meter pomengrate">
-                                    <span style="width: 95%"><span>Spring-Data-JPA</span></span>
+                                    <span style="width: 100%"><span>Spring-Data-JPA</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 80%"><span>Spring-Data-Redis</span></span>
+                                    <span style="width: 100%"><span>Spring-Data-Redis</span></span>
                                 </div>
 								<div class="meter emerald">
-                                    <span style="width: 50%"><span>Spring-Data-Rest</span></span>
+                                    <span style="width: 70%"><span>Spring-Data-Rest</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>Spring-Social</span></span>
+                                    <span style="width: 100%"><span>Spring-Social</span></span>
                                 </div>
 				<div class="meter wisteria">
-                                    <span style="width: 90%"><span>Spring-Insight</span></span>
+                                    <span style="width: 100%"><span>Spring-Insight</span></span>
+                                </div>
+                                <div class="meter sunflower">
+                                    <span style="width: 100%"><span>Spring-HATOS</span></span>
                                 </div>
 								<div class="break"></div>
 				<h5>
