--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                     <span style="width: 70%"><span>Redis</span></span>
                                 </div>
 								<div class="meter pomengrate">
-                                    <span style="width: 40%"><span>Infispan</span></span>
+                                    <span style="width: 40%"><span>Infinispan</span></span>
                                 </div>
                                 <div class="meter asbestos">
                                     <span style="width: 40%"><span>Elasticsearch</span></span>
