능력치 수정

--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
                     Programming Language
                 </h5>
                 <div class="meter wisteria">
-                    <span style="width: 100%"><span>Java</span></span>
+                    <span style="width: 90%"><span>Java</span></span>
                 </div>
                 <div class="meter sunflower">
-                    <span style="width: 40%"><span>Groovy</span></span>
+                    <span style="width: 60%"><span>Groovy</span></span>
                 </div>
                 <div class="meter midnight">
                     <span style="width: 40%"><span>Python</span></span>
@@ -241,25 +241,19 @@
                 </div>
                 <div class="break"></div>
                 <h5>
-                    Java Framework Work
+                    Java FrameworkWork
                 </h5>
                 <div class="meter emerald">
                     <span style="width: 95%"><span>Spring-Framwork</span></span>
                 </div>
                 <div class="meter carrot">
-                    <span style="width: 90%"><span>JPA/Hiberante</span></span>
+                    <span style="width: 90%"><span>JPA/Hiberante/QueryDSL</span></span>
                 </div>
                 <div class="meter wisteria">
-                    <span style="width: 95%"><span>Mybatis/Ibatis</span></span>
+                    <span style="width: 95%"><span>Mybatis</span></span>
                 </div>
                 <div class="meter sunflower">
                     <span style="width: 90%"><span>Tiles/Thymleaf/Mustache</span></span>
-                </div>
-                <div class="meter midnight">
-                    <span style="width: 80%"><span>QueryDSL</span></span>
-                </div>
-                <div class="meter pomengrate">
-                    <span style="width: 40%"><span>Logstash</span></span>
                 </div>
                 <h5>
                     Javascript Framework
@@ -346,7 +340,7 @@
                 <img src="images/le.jpg" alt="NCSOFT Lineage Eternal">
                 <div class="image-overlay">
                     <div class="image-link">
-                        <a href="http://global.ncsoft.com/global/gamenservice/playncgames.aspx?game=LE" class="btn">NCSOFT Lineage Eternal</a>
+                        <a href="http://global.ncsoft.com/global/gamenservice/playncgames.aspx?game=LE" class="btn" target="_blank">NCSOFT Lineage Eternal</a>
                     </div>
                 </div>
             </div>
@@ -356,22 +350,11 @@
                 <img src="images/sandbox.jpg" alt="NCSOFT BNS Sandbox">
                 <div class="image-overlay">
                     <div class="image-link">
-                        <a href="http://sandbox.plaync.com/lyn/my/timeline/wall" class="btn">NCSOFT SNS Full View</a>
+                        <a href="http://sandbox.plaync.com/lyn/my/timeline/wall" class="btn" target="_blank">NCSOFT SNS Full View</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="g1">
-            <div class="image">
-                <img src="images/1sttest.jpg" alt="Freechal 1sttest">
-                <div class="image-overlay">
-                    <div class="image-link">
-                        <a href="#" class="btn">Freechal Admissions Portal Site Closed</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="break"></div>
         <div class="g1">
             <div class="image">
                 <img src="images/iam.jpg" alt="Freechal iam">
@@ -382,12 +365,23 @@
                 </div>
             </div>
         </div>
+        <div class="break"></div>
+        <div class="g1">
+            <div class="image">
+                <img src="images/1sttest.jpg" alt="Freechal 1sttest">
+                <div class="image-overlay">
+                    <div class="image-link">
+                        <a href="#" class="btn">Freechal Admissions Portal Site Closed</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="g1">
             <div class="image">
                 <img src="images/multicampus.jpg" alt="SDS Multicampus">
                 <div class="image-overlay">
                     <div class="image-link">
-                        <a href="http://www.multicampus.co.kr" class="btn">SDS Multicampus Full View</a>
+                        <a href="http://www.multicampus.co.kr" class="btn" target="_blank">SDS Multicampus Full View</a>
                     </div>
                 </div>
             </div>
@@ -397,7 +391,7 @@
                 <img src="images/hunel.jpg" alt="HCG Hunel">
                 <div class="image-overlay">
                     <div class="image-link">
-                        <a href="http://www.hunel.co.kr/function/function01.html" class="btn">e-HR Solution Full View</a>
+                        <a href="http://www.hunel.co.kr/function/function01.html" class="btn" target="_blank">e-HR Solution Full View</a>
                     </div>
                 </div>
             </div>
