--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         - Lineage Eternal Game Platform
                     </p>
                     <p>
-                        - Build & Deployment Platform
+                        - Build & Deploy System
                     </p>
                     <p>
                         - Blade&Soul Gamer SNS Sandbox
@@ -249,7 +249,7 @@
                 <div class="meter carrot">
                     <span style="width: 95%"><span>JPA/Hiberante/QueryDSL</span></span>
                 </div>
-                
+
                 <div class="meter wisteria">
                     <span style="width: 95%"><span>Mybatis</span></span>
                 </div>
