--- a/seminar.html
+++ b/seminar.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <META HTTP-EQUIV="Refresh" CONTENT="URL=http://default-environment-yd5ikpv5hg.elasticbeanstalk.com/docs/v1.html">
 </head>
+<script type='text/javascript'>
+<!--
+    location.href='http://default-environment-yd5ikpv5hg.elasticbeanstalk.com/docs';
+//-->
+</script>
 <body>
 </body>
 </html>
