redirect v2.html 로 변경

--- a/seminar.html
+++ b/seminar.html
@@ -3,7 +3,7 @@
 </head>
 <script type='text/javascript'>
 <!--
-    location.href='http://default-environment-yd5ikpv5hg.elasticbeanstalk.com/docs';
+    location.href='http://default-environment-yd5ikpv5hg.elasticbeanstalk.com/docs/v1.html';
 //-->
 </script>
 <body>
