--- a/docs.html
+++ b/docs.html
@@ -3,7 +3,7 @@
 </head>
 <script type='text/javascript'>
 <!--
-    location.href='http://default-environment-yd5ikpv5hg.elasticbeanstalk.com/docs/v1.html';
+    location.href='http://gmind7.github.io/slide.html';
 //-->
 </script>
 <body>
